Fix horizontally overflowing room container

--- a/client/views/application/style.css
+++ b/client/views/application/style.css
@@ -147,7 +147,8 @@ div, body, html {
     width: 80%;
     top: 50px;
     bottom: 50px;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .sidebar {
